--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Asteroid - Neo Stats</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 		
 	</head>
 	<body>
@@ -59,6 +59,39 @@
 </html>
 
 <script type="text/javascript">
+	var jsonfile = {
+		"jsonarray": [{
+			"Date": "2019-01-07",
+			"totalAstronoids": 12
+		}, {
+			"Date": "2019-01-08",
+			"totalAstronoids": 15
+		},
+		{
+			"Date": "2019-01-09",
+			"totalAstronoids": 10
+		},
+		{
+			"Date": "2019-01-10",
+			"totalAstronoids": 05
+		},
+		{
+			"Date": "2019-01-11",
+			"totalAstronoids": 07
+		},
+		{
+			"Date": "2019-01-12",
+			"totalAstronoids": 08
+		}]
+	};
+
+	var labels = jsonfile.jsonarray.map(function(e) {
+		return e.Date;
+	});
+	var data = jsonfile.jsonarray.map(function(e) {
+		return e.totalAstronoids;
+	});
+
 	var ctx = document.getElementById('myChart').getContext('2d');
 	var chart = new Chart(ctx, {
 	    // The type of chart we want to create
@@ -66,14 +99,13 @@
         
 	    // The data for our dataset
 	    data: {
-	        labels: ["January", "February", "March", "April", "May", "June", "July"],
-	        datasets: [{
-	            label: "My First dataset",
-	            backgroundColor: 'rgb(255, 99, 132)',
-	            borderColor: 'rgb(255, 99, 132)',
-	            data: [0,10,20,0.100],
-	        }]
-	    },
+			labels: labels,
+			datasets: [{
+				label: 'Astronoids',
+				data: data,
+				backgroundColor: 'rgba(0, 119, 204, 0.3)'
+			}]
+		},
 
 	    // Configuration options go here
 	    options: {}
